Correction to IY report.

--- a/aber/IY_report/report.tex
+++ b/aber/IY_report/report.tex
@@ -309,7 +309,7 @@ Mavericks, Red Hat Enterprise Linux 6, and Fedora 20.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{img/GitWorflow-Testing.png}
-\caption{Diagram showing how the team used git branches to test features/bugfixes. The ticket is merged with a local copy of master and tested by the tester. If testing fails the ticket is reopened. If testing passes the branch is merged with the master on GitHub and the feature branch deleted. Source: {[}11{]}}
+\caption{Diagram showing how the team used git branches to test features/bugfixes. The ticket is merged with a local copy of master and tested by the tester. If testing fails the ticket is reopened. If testing passes the branch is merged with the master branch on GitHub and the feature branch deleted. Source: {[}11{]}}
 \label{fig:git-testing-flow}
 \end{figure}
 
