--- a/aber/agile/references.bib
+++ b/aber/agile/references.bib
@@ -14,6 +14,15 @@
   urldate = {2014-10-18}
 }
 
+
+@online{wells1999design,
+  author = {Don Wells},
+  title = {Design a Simulator for the Coffee Maker},
+  year = 1999,
+  url = {http://www.extremeprogramming.org/example/crcsim.html},
+  urldate = {2014-10-19}
+}
+
 @online{atwood2005head,
   author = {Jeff Atwood},
   title = {Head First Design Patterns},
