Change name of document

--- a/aber/agile/110036072_CS313_AgileDesign.tex
+++ b/aber/agile/110036072_CS313_AgileDesign.tex
@@ -91,7 +91,7 @@ Another key point that the article makes is the mindset of the developer to desi
 
 There is also the implication that although developers may have varying skill sets, all developers are equal within XP. Younger members should be encouraged to contribute to design. This aids with the sense of project ownership which leads into Fowler's later point about the ``The Will to Design''.  Having team members who are enthused by a project and take an active part in design nurtures the courage and will to improve the design of the system. More eyes on the code base means issues are caught and resolved sooner. It doesn't need to be everyone's primary responsibility, but it helps if the people who know the code best are active in maintaining its design.
 
-My own opinion on design in XP closely mirrors that which Martin Fowler puts forward in ``Is Design Dead''. I believe that XP's approach to design is sufficient for building software systems. I even agree that effective design can be achieved by sticking to the more hard-line versions of XP advocated by the likes of Kent Beck, where there is no place for UML and that all design issues are resolved by refactoring exclusively. However I am not content to throw my weight behind such a hard-line view because it strikes me as overly dogmatic and (ironically) restrictive.
+My own opinion on design in XP closely mirrors that which Martin Fowler puts forward in ``Is Design Dead''. I believe that XP's approach to design is sufficient for building software systems. I even agree that effective design can be achieved by sticking to the more hard-line versions of XP advocated by the likes of Kent Beck, where there is no place for UML and that all design issues are resolved by refactoring exclusively. However I am not content to throw my weight behind such a hard-line view because it strikes me as overly dogmatic and (ironically) restrictive.\textsl{•}
 
 Yes, I would agree that an effective design in a large project can be achieved without a single UML diagram or basic architectural  design but my question is why you would want to limit yourself so harshly? If an idea can best be communicated through the use of a quick UML diagram scrawled on a white board then do it. The essence of the argument XP makes is that they become an issue when they are too tightly adhered to. Likewise, I agree with the point made in the section ``Things that are difficult to refactor in''. In some circumstances their may be scope for adding some anticipatory structures in violation of YAGNI, but the circumstances that may justify this are less frequent than most people think and I strongly agree with the statement that it may have well of been harder had a feature been implemented earlier.
 
