Vision report: Checkpointing work.

--- a/aber/vision/references.bib
+++ b/aber/vision/references.bib
@@ -1,3 +1,13 @@
+@inproceedings{viola2001rapid,
+  title={Rapid object detection using a boosted cascade of simple features},
+  author={Viola, Paul and Jones, Michael},
+  booktitle={Computer Vision and Pattern Recognition, 2001. CVPR 2001. Proceedings of the 2001 IEEE Computer Society Conference on},
+  volume={1},
+  pages={I--511},
+  year={2001},
+  organization={IEEE}
+}
+
 @article{viola2004robust,
   title={Robust real-time face detection},
   author={Viola, Paul and Jones, Michael J},
@@ -6,5 +16,108 @@
   number={2},
   pages={137--154},
   year={2004},
+  publisher={Springer}
+}
+
+@article{yang2002detecting,
+  title={Detecting faces in images: A survey},
+  author={Yang, Ming-Hsuan and Kriegman, David and Ahuja, Narendra},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={24},
+  number={1},
+  pages={34--58},
+  year={2002},
+  publisher={IEEE}
+}
+
+@inproceedings{viola2003detecting,
+  title={Detecting pedestrians using patterns of motion and appearance},
+  author={Viola, Paul and Jones, Michael J and Snow, Daniel},
+  booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
+  pages={734--741},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{zhang2006learning,
+  title={Learning-based license plate detection using global and local features},
+  author={Zhang, Huaifeng and Jia, Wenjing and He, Xiangjian and Wu, Qiang},
+  booktitle={Pattern Recognition, 2006. ICPR 2006. 18th International Conference on},
+  volume={2},
+  pages={1102--1105},
+  year={2006},
+  organization={IEEE}
+}
+
+@article{wilson2006facial,
+  title={Facial feature detection using Haar classifiers},
+  author={Wilson, Phillip Ian and Fernandez, John},
+  journal={Journal of Computing Sciences in Colleges},
+  volume={21},
+  number={4},
+  pages={127--133},
+  year={2006},
+  publisher={Consortium for Computing Sciences in Colleges}
+}
+
+@article{sung1998example,
+%  title={Example-based learning for view-based human face detection},
+  author={Sung, Kah-Kay and Poggio, Tomaso},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={20},
+  number={1},
+  pages={39--51},
+  year={1998},
+  publisher={IEEE}
+}
+
+@inproceedings{schneiderman2000statistical,
+  title={A statistical method for 3D object detection applied to faces and cars},
+  author={Schneiderman, Henry and Kanade, Takeo},
+  booktitle={Computer Vision and Pattern Recognition, 2000. Proceedings. IEEE Conference on},
+  volume={1},
+  pages={746--751},
+  year={2000},
+  organization={IEEE}
+}
+
+@article{rowley1998neural,
+  title={Neural network-based face detection},
+  author={Rowley, Henry A and Baluja, Shumeet and Kanade, Takeo},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={20},
+  number={1},
+  pages={23--38},
+  year={1998},
+  publisher={IEEE}
+}
+
+@inproceedings{lienhart2002extended,
+  title={An extended set of haar-like features for rapid object detection},
+  author={Lienhart, Rainer and Maydt, Jochen},
+  booktitle={Image Processing. 2002. Proceedings. 2002 International Conference on},
+  volume={1},
+  pages={I--900},
+  year={2002},
+  organization={IEEE}
+}
+
+@article{jones2003fast,
+  title={Fast multi-view face detection},
+  author={Jones, Michael and Viola, Paul},
+  journal={Mitsubishi Electric Research Lab TR-20003-96},
+  volume={3},
+  pages={14},
+  year={2003}
+}
+
+@article{brubaker2008design,
+  title={On the design of cascades of boosted ensembles for face detection},
+  author={Brubaker, S Charles and Wu, Jianxin and Sun, Jie and Mullin, Matthew D and Rehg, James M},
+  journal={International Journal of Computer Vision},
+  volume={77},
+  number={1-3},
+  pages={65--86},
+  year={2008},
   publisher={Springer}
 }
